2009-Mar-31 Dave Glowacki
  * updates to manual: (1) discussion of Linux compilation issues & (2) discussion of Bartis Widom output
  * add to Bartis Widom code so that it checks separation between CSEs and IEREs and generates warning messages if appropriate
  * update baselines

2009-Mar-30 Struan Robertson

  * MesmerQA: Initial checkin of isopropyl test.

2009-Mar-30 Dave Glowacki
  * fixed GCC compiler problem that showed up when testing 64 bit compilation

2009-Mar-26 Dave Glowacki
  * fixed GCC compiler problem that showed up when testing 64 bit compilation

2009-Mar-21 Struan Robertson

  * src/ReactionManager.cpp: Tidy-up of BuildReactionOperator method.

2009-Mar-21 Struan Robertson

  * src/AssociationReaction.cpp: Added code relating to contracted basis set method.

2009-03-14 Chris Morley
  
  * src/Persistence.h: make PersistPtr work with NULL content.
    (Previously only partially implemented.)
  * src/XMLPersist.cpp, src/XMLPersist.h: Move loading of defaults.xml until
  it is used, so that a fully formed XML file doesn't need it. Make more robust
  to missing defaults.xml and librarymols.xml.

_2009_03_13__11_48_50_ Chi-Hsiu Liang

  * Updated manual for reservoir state method
  * Added a QA for reservoir state method; about additional 1 minute will add to the QA test. 
    In these moderately high temperatures, 800K and 1000K, for the cyclopropene isomerization system,
    the approximation is not perfect and also the computational gaining is only about three times.
    From the suggestion of Dave, we are thinking about implementing a new species profile method
    that takes the values from the Bartis-Windom matrix, which could possibly save some additional time.

_2009_03_10__16_52_59_ Chi-Hsiu Liang

  * Corrected the Bartis-Widom rate code for irreversible terms.

_2009_03_10__12_40_45_ Chi-Hsiu Liang

  * Tidy up some unused code.

_2009_03_10__11_07_28_ Chi-Hsiu Liang

  * Corrected the lowest barrier calculation for wells.
